--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -73,6 +73,7 @@
 
 
         margin-right: 3.6rem;
+        ;
 
         @media only screen and (max-width: 521.5px) {
             margin-right: 0rem;
@@ -112,6 +113,10 @@
 
         font-size: 2.4rem !important;
 
+
+        position: relative;
+        z-index: 4900;
+
         text-transform: uppercase;
         text-decoration: none;
         color: $red_color;
@@ -145,6 +150,10 @@
             margin-right: 0;
             padding-top: 1rem;
             transform: translateY(-17px);
+
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
         }
 
         position: relative;
@@ -190,7 +199,7 @@
             margin-right: 3.4rem;
         }
 
-        
+
         @media only screen and (max-width: 360px) {
             padding: 24.9px 20px;
             margin-right: 3.2rem;
@@ -235,6 +244,7 @@
 
     .header .menu-btn:checked~.menu {
         max-height: 240px;
+        height: 210px;
     }
 
     .header .menu-btn:checked~.menu-icon .navicon {
