--- a/styles/main.css
+++ b/styles/main.css
@@ -262,6 +262,8 @@ body {
   float: left;
   padding: 12px 0 0 0;
   font-size: 2.4rem !important;
+  position: relative;
+  z-index: 4900;
   text-transform: uppercase;
   text-decoration: none;
   color: #FF4858;
@@ -295,6 +297,16 @@ body {
     padding-top: 1rem;
     -webkit-transform: translateY(-17px);
             transform: translateY(-17px);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
 }
 
@@ -390,6 +402,7 @@ body {
 
 .section-header .header .menu-btn:checked ~ .menu {
   max-height: 240px;
+  height: 210px;
 }
 
 .section-header .header .menu-btn:checked ~ .menu-icon .navicon {
