--- a/styles/components/_info.scss
+++ b/styles/components/_info.scss
@@ -24,9 +24,9 @@
         &--w436 {
             max-width: 43.6rem;
 
-            @include respond(tab-md) {
-                font-size: 2.4rem !important;
-            }
+            // @include respond(tab-md) {
+            //     font-size: 2.4rem !important;
+            // }
 
             @include respond(phone-xsl) {
                 font-size: 2rem !important;
