test for carousel

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@
 @import "./components/info";
 @import "./components/gridbox";
 @import "./components/navigation";
+@import "./components/carousel2";
 
 //PAGES
 @import "./pages/home-page";
