--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -15,10 +15,13 @@
             }
 
             & > p {
-                color: $medium-grey-color;
+                color: rgba(255, 255, 255, 0.5);
                 text-align: center;
                 max-width: 24rem;
                 font-weight: 100;
+                line-height: 1.4rem;
+                font-family: "Raleway", sans-serif;
+                font-size: 1.2rem;
             }
 
             display: flex;
