--- a/styles/components/_info.scss
+++ b/styles/components/_info.scss
@@ -25,6 +25,7 @@
         letter-spacing: 0;
         margin-bottom: 1.2rem;
         font-family: 'Poppins', sans-serif;
+        line-height: 4rem;
 
         &--w436 {
             max-width: 43.6rem;
@@ -32,6 +33,8 @@
             // @include respond(tab-md) {
             //     font-size: 2.4rem !important;
             // }
+
+            line-height: 2.6rem;
 
             @include respond(phone-xsl) {
                 font-size: 2rem !important;
@@ -49,6 +52,7 @@
 
         font-weight: 100;
         font-family: 'Roboto', sans-serif;
+        line-height: 1.9rem;
 
         @include respond(tab-md) {
             font-size: 1.4rem;
