--- a/styles/main.css
+++ b/styles/main.css
@@ -20,9 +20,9 @@ body {
   -ms-grid-columns: [full-start] minmax(min-content, 1fr) [center-start] (minmax(min-content, 12rem))[10] [center-end] minmax(min-content, 1fr) [full-end];
       grid-template-columns: [full-start] minmax(-webkit-min-content, 1fr) [center-start] repeat(10, minmax(-webkit-min-content, 12rem)) [center-end] minmax(-webkit-min-content, 1fr) [full-end];
       grid-template-columns: [full-start] minmax(min-content, 1fr) [center-start] repeat(10, minmax(min-content, 12rem)) [center-end] minmax(min-content, 1fr) [full-end];
-  -ms-grid-rows: min-content 40rem 1fr min-content;
-      grid-template-rows: -webkit-min-content 40rem 1fr -webkit-min-content;
-      grid-template-rows: min-content 40rem 1fr min-content;
+  -ms-grid-rows: min-content 40rem .8fr min-content;
+      grid-template-rows: -webkit-min-content 40rem .8fr -webkit-min-content;
+      grid-template-rows: min-content 40rem .8fr min-content;
   height: 100vh;
 }
 
@@ -36,7 +36,7 @@ body {
 
 .m-b-1 {
   margin-top: 2.1rem;
-  margin-bottom: 7.2rem;
+  margin-bottom: 7.7rem;
 }
 
 @media only screen and (max-width: 64em) {
@@ -160,7 +160,7 @@ body {
 
 .section-header .header {
   width: 100%;
-  max-width: 1200px;
+  max-width: 701px;
   background-color: transparent;
   position: relative;
   z-index: 300;
@@ -455,6 +455,31 @@ body {
           align-items: center;
 }
 
+.section-carousel::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-image: url("../../assets/img/JohnCleeseEricIdle.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
+
+.section-carousel::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(88, 99, 248, 0.5);
+}
+
 .section-footer {
   grid-column: full-start / full-end;
   -ms-grid-row: 4;
@@ -490,10 +515,13 @@ body {
 }
 
 .section-footer .footer__details > p {
-  color: silver;
+  color: rgba(255, 255, 255, 0.5);
   text-align: center;
   max-width: 24rem;
   font-weight: 100;
+  line-height: 1.4rem;
+  font-family: "Raleway", sans-serif;
+  font-size: 1.2rem;
 }
 
 .section-main {
@@ -607,10 +635,12 @@ body {
   letter-spacing: 0;
   margin-bottom: 1.2rem;
   font-family: 'Poppins', sans-serif;
+  line-height: 4rem;
 }
 
 .info__heading--w436 {
   max-width: 43.6rem;
+  line-height: 2.6rem;
 }
 
 @media only screen and (max-width: 22.5em) {
@@ -630,6 +660,7 @@ body {
   color: #231841;
   font-weight: 100;
   font-family: 'Roboto', sans-serif;
+  line-height: 1.9rem;
 }
 
 @media only screen and (max-width: 48em) {
@@ -736,6 +767,8 @@ body {
   color: #5863F8;
   text-transform: uppercase;
   font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  line-height: 1.9rem;
 }
 
 .gridbox__card__details__headings__heading {
@@ -743,6 +776,7 @@ body {
   color: #231841;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
+  line-height: 3.3rem;
 }
 
 .gridbox__card__details__headings__heading::after {
@@ -753,13 +787,15 @@ body {
   display: block;
   background-color: #5863F8;
   width: 8rem;
-  height: .1999rem;
+  height: .2rem;
 }
 
 .gridbox__card__details__stories {
   color: silver;
   font-size: 1.4rem;
+  line-height: 2rem;
   max-width: 27.8rem;
+  font-weight: 100;
   font-family: 'Roboto', sans-serif;
 }
 
