--- a/styles/base/_utilites.scss
+++ b/styles/base/_utilites.scss
@@ -1,16 +1,16 @@
 //MARGINS FOR CARD_STORIES
 .m-b-1 {
     margin-top: 2.1rem;
-    margin-bottom: 7.7rem;
+    margin-bottom: 8rem;
 
     @include respond(tab-land-sm) {
         margin-top: 2rem;
-        margin-bottom: 6.5rem;
+        margin-bottom: 7.1rem;
     }
 
-    @include respond(tab-md) {
-        margin-bottom: 4.79rem;
-    }
+    // @include respond(tab-md) {
+    //     margin-bottom: 4.79rem;
+    // }
 }
 
 .m-b-2 {
@@ -26,6 +26,10 @@
 .m-b-3 {
     margin-top: 2.1rem;
     margin-bottom: 3.79rem;
+
+    @include respond(tab-land-sm) {
+        margin-bottom: 3.5rem;
+    }
 
     @include respond(tab-md) {
         margin-bottom: 3.5rem;
@@ -85,12 +89,12 @@ gridbox-card-detauls .g-c-d {
 //margin buttons 
 .m-button-b {
     @include respond(tab-md) {
-        margin-bottom: 4.5rem !important;
+        margin-bottom: 3.2rem !important;
     }
 }
 
 .m-button-all {
-    @include respond(tab-md) {
-        margin-bottom: 3.2rem !important;
-    }
+    // @include respond(tab-md) {
+    //     margin-bottom: 3.2rem !important;
+    // }
 }
