--- a/styles/main.css
+++ b/styles/main.css
@@ -36,19 +36,13 @@ body {
 
 .m-b-1 {
   margin-top: 2.1rem;
-  margin-bottom: 7.7rem;
+  margin-bottom: 8rem;
 }
 
 @media only screen and (max-width: 64em) {
   .m-b-1 {
     margin-top: 2rem;
-    margin-bottom: 6.5rem;
-  }
-}
-
-@media only screen and (max-width: 48em) {
-  .m-b-1 {
-    margin-bottom: 4.79rem;
+    margin-bottom: 7.1rem;
   }
 }
 
@@ -67,6 +61,12 @@ body {
 .m-b-3 {
   margin-top: 2.1rem;
   margin-bottom: 3.79rem;
+}
+
+@media only screen and (max-width: 64em) {
+  .m-b-3 {
+    margin-bottom: 3.5rem;
+  }
 }
 
 @media only screen and (max-width: 48em) {
@@ -124,12 +124,6 @@ body {
 
 @media only screen and (max-width: 48em) {
   .m-button-b {
-    margin-bottom: 4.5rem !important;
-  }
-}
-
-@media only screen and (max-width: 48em) {
-  .m-button-all {
     margin-bottom: 3.2rem !important;
   }
 }
@@ -166,9 +160,9 @@ body {
   z-index: 300;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 768px) {
   .section-header .header {
-    padding: 0 12.8rem;
+    max-width: 100%;
   }
 }
 
@@ -237,15 +231,15 @@ body {
 }
 
 .section-header .header li a p::after {
-  margin-top: .1rem;
+  margin-top: 0.1rem;
   content: "";
   width: 0%;
   background-color: #FF4858;
-  height: .2rem;
+  height: 0.2rem;
   display: block;
   opacity: 1;
-  -webkit-transition: .2s ease-in-out all;
-  transition: .2s ease-in-out all;
+  -webkit-transition: 0.2s ease-in-out all;
+  transition: 0.2s ease-in-out all;
 }
 
 .section-header .header li a p:hover::after {
@@ -342,7 +336,7 @@ body {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  margin-right: .7rem;
+  margin-right: 0.7rem;
 }
 
 @media only screen and (max-width: 521px) {
@@ -510,12 +504,13 @@ body {
 
 .section-footer .footer__details > h4 {
   margin-bottom: 1rem;
-  color: #FFFFFF;
-  font-weight: 500;
+  color: rgba(255, 255, 255, 0.7);
+  font-weight: 400;
+  font-size: 1.2rem;
 }
 
 .section-footer .footer__details > p {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.4);
   text-align: center;
   max-width: 24rem;
   font-weight: 100;
@@ -557,7 +552,7 @@ body {
 
 @media only screen and (max-width: 64em) {
   .section-main {
-    padding: 5.4rem 4.8rem;
+    padding: 2rem 4.8rem;
     margin: 0 3.2rem;
   }
 }
@@ -666,6 +661,7 @@ body {
 @media only screen and (max-width: 48em) {
   .info__paragraph {
     font-size: 1.4rem;
+    width: 64rem;
   }
 }
 
